--- a/drivers/usbdev/Kconfig
+++ b/drivers/usbdev/Kconfig
@@ -345,6 +345,20 @@ config PL2303_EPBULK_SSSIZE
 		Max package size for the bulk endpoint if super speed mode.
 		Default 1024.
 
+config PL2303_EPBULK_MAXBURST
+	int "BULK endpoints super speed MAXBURST size"
+	default 0
+	---help---
+		Max burst size for the bulk endpoint if super speed mode.
+		Default 0.
+
+config PL2303_EPBULK_MAXSTREAM
+	int "BULK endpoints super speed MAXSTREAM size"
+	default 0
+	---help---
+		Max stream size for the bulk endpoint if super speed mode.
+		Default 0.
+
 endif # USBDEV_SUPERSPEED
 
 config PL2303_NWRREQS
@@ -500,6 +514,13 @@ config CDCACM_EPINTIN_SSSIZE
 		Max package size for the interrupt IN endpoint if super speed mode.
 		Default 64.
 
+config CDCACM_EPINTIN_MAXBURST
+	int "Interrupt IN super speed MAXBURST size"
+	default 0
+	---help---
+		Max burst size for the interrupt IN endpoint if super speed mode.
+		Default 0.
+
 endif # USBDEV_SUPERSPEED
 
 if !CDCACM_COMPOSITE
@@ -526,7 +547,7 @@ config CDCACM_EPBULKOUT_FSSIZE
 if USBDEV_DUALSPEED
 
 config CDCACM_EPBULKOUT_HSSIZE
-	int "Bulk OUT out high speed MAXPACKET size"
+	int "Bulk OUT high speed MAXPACKET size"
 	default 512
 	---help---
 		Max package size for the bulk OUT endpoint if high speed mode.
@@ -537,11 +558,25 @@ endif # USBDEV_DUALSPEED
 if USBDEV_SUPERSPEED
 
 config CDCACM_EPBULKOUT_SSSIZE
-	int "Bulk OUT out super speed MAXPACKET size"
+	int "Bulk OUT super speed MAXPACKET size"
 	default 1024
 	---help---
 		Max package size for the bulk OUT endpoint if super speed mode.
 		Default 1024.
+
+config CDCACM_EPBULKOUT_MAXBURST
+	int "Bulk OUT super speed MAXBURST size"
+	default 0
+	---help---
+		Max burst size for the bulk OUT endpoint if super speed mode.
+		Default 0.
+
+config CDCACM_EPBULKOUT_MAXSTREAM
+	int "Bulk OUT super speed MAXSTREAM size"
+	default 0
+	---help---
+		Max stream size for the bulk OUT endpoint if super speed mode.
+		Default 0.
 
 endif # USBDEV_SUPERSPEED
 
@@ -585,6 +620,20 @@ config CDCACM_EPBULKIN_SSSIZE
 	---help---
 		Max package size for the bulk IN endpoint if super speed mode.
 		Default 1024.
+
+config CDCACM_EPBULKIN_MAXBURST
+	int "Bulk IN super speed MAXBURST size"
+	default 0
+	---help---
+		Max burst size for the bulk IN endpoint if super speed mode.
+		Default 0.
+
+config CDCACM_EPBULKIN_MAXSTREAM
+	int "Bulk IN super speed MAXSTREAM size"
+	default 0
+	---help---
+		Max stream size for the bulk IN endpoint if super speed mode.
+		Default 0.
 
 endif # USBDEV_SUPERSPEED
 
@@ -749,6 +798,20 @@ config USBADB_EPBULKOUT_SSSIZE
 		Max package size for the bulk OUT endpoint if super speed mode.
 		Default 1024.
 
+config USBADB_EPBULKOUT_MAXBURST
+	int "Bulk OUT super speed MAXBURST size"
+	default 0
+	---help---
+		Max burst size for the bulk OUT endpoint if super speed mode.
+		Default 0.
+
+config USBADB_EPBULKOUT_MAXSTREAM
+	int "Bulk OUT super speed MAXBSTREAM size"
+	default 0
+	---help---
+		Max stream size for the bulk OUT endpoint if super speed mode.
+		Default 0.
+
 endif # USBDEV_SUPERSPEED
 
 config USBADB_EPBULKIN_FSSIZE
@@ -777,6 +840,20 @@ config USBADB_EPBULKIN_SSSIZE
 	---help---
 		Max package size for the bulk IN endpoint if super speed mode.
 		Default 1024.
+
+config USBADB_EPBULKIN_MAXBURST
+	int "Bulk IN super speed MAXBURST size"
+	default 0
+	---help---
+		Max burst size for the bulk IN endpoint if super speed mode.
+		Default 0.
+
+config USBADB_EPBULKIN_MAXSTREAM
+	int "Bulk IN super speed MAXBSTREAM size"
+	default 0
+	---help---
+		Max stream size for the bulk IN endpoint if super speed mode.
+		Default 0.
 
 endif # USBDEV_SUPERSPEED
 
@@ -1228,6 +1305,13 @@ config CDCECM_EPINTIN_SSSIZE
 		Max package size for the interrupt IN endpoint if super speed mode.
 		Default 64.
 
+config CDCECM_EPINTIN_MAXBURST
+	int "Interrupt IN super speed MAXBURST size"
+	default 0
+	---help---
+		Max burst size for the interrupt IN endpoint if super speed mode.
+		Default 0.
+
 endif # USBDEV_SUPERSPEED
 
 if !CDCECM_COMPOSITE
@@ -1271,6 +1355,20 @@ config CDCECM_EPBULKOUT_SSSIZE
 		Max package size for the bulk OUT endpoint if super speed mode.
 		Default 1024.
 
+config CDCECM_EPBULKOUT_MAXBURST
+	int "Bulk OUT super speed MAXBURST size"
+	default 0
+	---help---
+		Max burst size for the bulk OUT endpoint if super speed mode.
+		Default 0.
+
+config CDCECM_EPBULKOUT_MAXSTREAM
+	int "Bulk OUT super speed MAXSTREAM size"
+	default 0
+	---help---
+		Max stream size for the bulk OUT endpoint if super speed mode.
+		Default 0.
+
 endif # USBDEV_SUPERSPEED
 
 if !CDCECM_COMPOSITE
@@ -1313,6 +1411,20 @@ config CDCECM_EPBULKIN_SSSIZE
 	---help---
 		Max package size for the bulk IN endpoint if super speed mode.
 		Default 1024.
+
+config CDCECM_EPBULKIN_MAXBURST
+	int "Bulk IN super speed MAXBURST size"
+	default 0
+	---help---
+		Max burst size for the bulk IN endpoint if super speed mode.
+		Default 0.
+
+config CDCECM_EPBULKIN_MAXSTREAM
+	int "Bulk IN super speed MAXSTREAM size"
+	default 0
+	---help---
+		Max stream size for the bulk IN endpoint if super speed mode.
+		Default 0.
 
 endif # USBDEV_SUPERSPEED
 
@@ -1436,6 +1548,13 @@ config CDCNCM_EPINTIN_SSSIZE
 		Max package size for the interrupt IN endpoint if super speed mode.
 		Default 64.
 
+config CDCNCM_EPINTIN_MAXBURST
+	int "Interrupt IN super speed MAXBURST size"
+	default 0
+	---help---
+		Max burst size for the interrupt IN endpoint if super speed mode.
+		Default 0.
+
 endif # USBDEV_SUPERSPEED
 
 if !CDCNCM_COMPOSITE
@@ -1479,6 +1598,20 @@ config CDCNCM_EPBULKOUT_SSSIZE
 		Max package size for the bulk OUT endpoint if super speed mode.
 		Default 1024.
 
+config CDCNCM_EPBULKOUT_MAXBURST
+	int "Bulk OUT super speed MAXBURST size"
+	default 0
+	---help---
+		Max burst size for the bulk OUT endpoint if super speed mode.
+		Default 0.
+
+config CDCNCM_EPBULKOUT_MAXSTREAM
+	int "Bulk OUT super speed MAXSTREAM size"
+	default 0
+	---help---
+		Max stream size for the bulk OUT endpoint if super speed mode.
+		Default 0.
+
 endif # USBDEV_SUPERSPEED
 
 if !CDCNCM_COMPOSITE
@@ -1521,6 +1654,20 @@ config CDCNCM_EPBULKIN_SSSIZE
 	---help---
 		Max package size for the bulk IN endpoint if super speed mode.
 		Default 1024.
+
+config CDCNCM_EPBULKIN_MAXBURST
+	int "Bulk IN super speed MAXBURST size"
+	default 0
+	---help---
+		Max burst size for the bulk IN endpoint if super speed mode.
+		Default 0.
+
+config CDCNCM_EPBULKIN_MAXSTREAM
+	int "Bulk IN super speed MAXSTREAM size"
+	default 0
+	---help---
+		Max stream size for the bulk IN endpoint if super speed mode.
+		Default 0.
 
 endif # USBDEV_SUPERSPEED
 
@@ -1678,7 +1825,21 @@ config USBMTP_EPBULKOUT_SSSIZE
 		Max package size for the bulk OUT endpoint if Super Speed mode.
 		Default 1024.
 
-endif # USBDEV_DUALSPEED
+config USBMTP_EPBULKOUT_MAXBURST
+	int "Bulk OUT Super Speed MAXBURST size"
+	default 0
+	---help---
+		Max burst size for the bulk OUT endpoint if Super Speed mode.
+		Default 0.
+
+config USBMTP_EPBULKOUT_MAXSTREAM
+	int "Bulk OUT Super Speed MAXSTREAM size"
+	default 0
+	---help---
+		Max stream size for the bulk OUT endpoint if Super Speed mode.
+		Default 0.
+
+endif # USBDEV_SUPERSPEED
 
 config USBMTP_EPBULKIN_FSSIZE
 	int "Bulk IN Full Speed MAXPACKET size"
@@ -1707,7 +1868,21 @@ config USBMTP_EPBULKIN_SSSIZE
 		Max package size for the bulk IN endpoint if Super Speed mode.
 		Default 1024.
 
-endif # USBDEV_DUALSPEED
+config USBMTP_EPBULKIN_MAXBURST
+	int "Bulk IN Super Speed MAXBURST size"
+	default 0
+	---help---
+		Max burst size for the bulk IN endpoint if Super Speed mode.
+		Default 0.
+
+config USBMTP_EPBULKIN_MAXSTREAM
+	int "Bulk IN Super Speed MAXSTREAM size"
+	default 0
+	---help---
+		Max stream size for the bulk IN endpoint if Super Speed mode.
+		Default 0.
+
+endif # USBDEV_SUPERSPEED
 
 config USBMTP_EPINTIN_SIZE
 	int "Interrupt IN MAXPACKET size"
@@ -1720,6 +1895,17 @@ config USBMTP_EPINTIN_INTERVAL
 	default 10
 	---help---
 		The poll interval for the Interrupt IN endpoint, Default 10.
+
+if USBDEV_SUPERSPEED
+
+config USBMTP_EPINTIN_MAXBURST
+	int "Interrupt IN Super Speed MAXBURST size"
+	default 0
+	---help---
+		Max burst size for the Interrupt IN endpoint if Super Speed mode.
+		Default 0.
+
+endif # USBDEV_SUPERSPEED
 
 config USBMTP_NRDREQS
 	int "Number of read requests that can be in flight"
