lib_pathbuffer.c:Determine whether to malloc from the heap by CONFIG_LIBC_PATHBUFFER_MALLOC
Summary:
  If we disable LIB_PATHBUFFER_MALLOC, that when the path buffer is insufficient, NULL is returned to avoid applying for a buffer from the heap.

Signed-off-by: chenrun1 <chenrun1@xiaomi.com>

--- a/libs/libc/misc/Kconfig
+++ b/libs/libc/misc/Kconfig
@@ -120,3 +120,9 @@ config LIBC_MAX_PATHBUFFER
 	---help---
 		This value is the maximum size of the buffer that will hold the full
 		file path.
+
+config LIBC_PATHBUFFER_MALLOC
+	bool "Enable malloc pathbuffer"
+	default y
+	---help---
+		Enable malloc path buffer from the heap when pathbuffer is insufficient.
