--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -122,8 +122,13 @@ jobs:
       DOCKER_BUILDKIT: 1
 
     strategy:
+      max-parallel: 12
       matrix:
-        boards: [arm-01, arm-02, arm-03, arm-04, arm-05, arm-06, arm-07, arm-08, arm-09, arm-10, arm-11, arm-12, arm-13, other, risc-v-01, risc-v-02, sim-01, sim-02, xtensa-01, xtensa-02]
+        boards: [
+          arm-01, other, risc-v-01, sim-01, xtensa-01,
+          arm-02, risc-v-02, sim-02, xtensa-02,
+          arm-03, arm-04, arm-05, arm-06, arm-07, arm-08, arm-09, arm-10, arm-11, arm-12, arm-13
+        ]
 
     steps:
       - name: Download Source Artifact
@@ -178,6 +183,7 @@ jobs:
     runs-on: macos-13
     needs: Fetch-Source
     strategy:
+      max-parallel: 2
       matrix:
         boards: [macos, sim-01, sim-02]
     steps:
@@ -225,6 +231,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       fail-fast: false
+      max-parallel: 1
       matrix:
         boards: [msys2]
 
